# aura-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  requirements.txt  start.bat
orchestrator/: __init__.py  agent.py  agent_patches.py  changelog.py  cli_extensions.py  config.py  file_cache.py  incremental.py  main.py  memory.py  phase2.py  process_mgr.py  progress.py  review.py  runner.py  state.py  task_reporter.py  token_tracker.py  tools.py
orchestrator/docker/: Dockerfile.claude-cuda
orchestrator/templates/: progress.template.md
tasks/: example_mission.md
tests/: conftest.py  test_orchestrator.py
